# A-compleatly-normal-fishing-game

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: cubeFragment.glsl  cubeVertex.glsl  nearFragment.glsl  nearVertex.glsl
src/: main.cpp
src/engine/: Backend.hpp  CMakeLists.txt  Camera.hpp  Image.h  RenderObject.cpp  RenderObject.h  Shader.h
src/engine/compatibility/: Backend.hpp  HelperFunctions.hpp
src/engine/compatibility/opengl/: HelperFunctionsOpengl.hpp  OpenGlBackend.hpp
src/engine/customMath/: BigVec.hpp  Bigint.hpp
src/engine/opengl/: OpenGlBackend.hpp
src/game/: CMakeLists.txt  Test.cpp  Test.h
